# rsna-deep-learning-lab-2025

./: pyproject.toml
.github/workflows/: claude-review.yml
rsna_2025/: data_collection.py  model.py  train.py  utils.py
rsna_2025/data/: clinincal_metadata_TCGA.csv  multi_gene_assays.csv  radiomic_features_TCGA.csv
rsna_deep_learning_lab_2025/: data_collection.py  train.py  utils.py
