[tool.poetry]
name = "rsna-2025"
version = "0.1.0"
description = ""
authors = ["Dimitri Falco <dimitri.falco@quantivly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
torch-geometric = "2.5.0"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
