[tool.poetry]
name = "rsna-2025"
version = "0.1.0"
description = ""
authors = ["Dimitri Falco <dimitri.falco@quantivly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
torch-geometric = "2.5.0"
pandas = "^2.3.3"
numpy = "1.26.2"
plotly = "^6.5.0"
statsmodels = "^0.14.5"
umap-learn = "^0.5.9.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
